--- a/calculator.html
+++ b/calculator.html
@@ -13,37 +13,41 @@
 	<div id="res"> </div>
 
 	<div id="buttonsContainer">
-		<button id="btnLP" class="button" class="topThreeButtons">(</button>
-		<button id="btnRP" class="button" class="topThreeButtons">)</button>
-		<button id="btnPer" class="button" class="topThreeButtons">%</button>
-		<button id="btnClr" class="button" class="clearButton"> C </button>
+		<button id="btnLP" class="topThreeButtons">(</button>
+		<button id="btnRP" class="topThreeButtons">)</button>
+		<button id="btnPer" class="topThreeButtons">%</button>
+		<button id="btnClr" class="otherButtons"> C </button>
 
-		<button id="btn7" class="button" class="numButton">7</button>
-		<button id="btn8" class="button" class="numButton">8</button>
-		<button id="btn9" class="button" class="numButton">9</button>
-		<button id="btnDiv" class="button" class="opButton">/</button>
+		<button id="btn7" class="numButtons">7</button>
+		<button id="btn8" class="numButtons">8</button>
+		<button id="btn9" class="numButtons">9</button>
+		<button id="btnDiv" class="opButtons">/</button>
 
-		<button id="btn4" class="button" class="numButton">4</button>
-		<button id="btn5" class="button" class="numButton">5</button>
-		<button id="btn6" class="button" class="numButton">6</button>
-		<button id="btnMul" class="button" class="opButton">*</button>
+		<button id="btn4" class="numButtons">4</button>
+		<button id="btn5" class="numButtons">5</button>
+		<button id="btn6" class="numButtons">6</button>
+		<button id="btnMul" class="opButtons">*</button>
 
-		<button id="btn1" class="button" class="numButton">1</button>
-		<button id="btn2" class="button" class="numButton">2</button>
-		<button id="btn3" class="button" class="numButton">3</button>
-		<button id="btnSub" class="button" class="opButton">-</button>
+		<button id="btn1" class="numButtons">1</button>
+		<button id="btn2" class="numButtons">2</button>
+		<button id="btn3" class="numButtons">3</button>
+		<button id="btnSub" class="opButtons">-</button>
 
-		<button id="btn0" class="button" class="numButton">0</button>
-		<button id="btnDec" class="button">.</button>
-		<button id="btnEql" class="button" class="opButton">=</button>
-		<button id="btnSum" class="button" class="opButton">+</button>
+		<button id="btn0" class="numButtons">0</button>
+		<button id="btnDec" class="otherButtons">.</button>
+		<button id="btnEql" class="otherButtons">=</button>
+		<button id="btnSum" class="opButtons">+</button>
+	</div>
+
+
+	<div id="footerbox"> 
+		<address>
+			Created by Troy Feng.<br>
+			<a href = mailto:troy.feng@yale.edu>troy.feng@yale.edu</a>
+		</address>
 	</div>
 
 </body>
 
-<address> 
-Created by Troy Feng.<br>
-<a href = mailto:troy.feng@yale.edu>troy.feng@yale.edu</a>
-</address>
 
 </html>
