--- a/calculator.html
+++ b/calculator.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
 	<h1>Simple Calculator</h1>
 	<div id="res"> </div>
 
@@ -16,7 +17,7 @@
 		<button id="btnLP" class="topThreeButtons">(</button>
 		<button id="btnRP" class="topThreeButtons">)</button>
 		<button id="btnPer" class="topThreeButtons">%</button>
-		<button id="btnClr" class="otherButtons"> C </button>
+		<button id="btnClr" class="otherButtons">C</button>
 
 		<button id="btn7" class="numButtons">7</button>
 		<button id="btn8" class="numButtons">8</button>
@@ -37,6 +38,8 @@
 		<button id="btnDec" class="otherButtons">.</button>
 		<button id="btnEql" class="otherButtons">=</button>
 		<button id="btnSum" class="opButtons">+</button>
+
+		<script src="calculator.js" type="text/javascript"></script>
 	</div>
 
 
