--- a/calculator.html
+++ b/calculator.html
@@ -10,10 +10,10 @@
 
 <body>
 
-	<h1>Simple Calculator</h1>
+	<h1>Calculator</h1>
 
 	<div id="exp"> </div>
-	
+
 	<div id="res"> </div>
 
 	<div id="buttonsContainer">
