--- a/calculator.html
+++ b/calculator.html
@@ -10,7 +10,17 @@
 
 <body>
 
-	<h1>Calculator Applet</h1>
+	<div id="header">
+		<h1>Calculator Applet</h1>
+	</div>
+
+	<div>
+		<ul id="menubar">
+			<li><a href="calculator.html" class="active">Calculator 1</a></li>
+			<li><a href="calculator-2.html">Calculator 2</a></li>
+			<li><a href="calculator-3.html">Calculator 3</a></li>
+		</ul> 
+	</div>
 
 	<div id="exp"> </div>
 
